# boostspace-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cli-improvement-backlog.md
examples/: monthly-timesheet-automation-runbook.md  monthly-timesheet-boost-native.blueprint.json  sample-workflow-lead-capture.json
mcp-server/: README.md  package-lock.json  package.json
mcp-server/src/: index.mjs
src/boostspace_cli/: __init__.py  auth.py  blueprints.py  catalog_cli.py  cli.py  client.py  config.py  connections.py  docs_catalog.py  executables.py  executions.py  formulas_cli.py  gws.py  jsonio.py  mcp_cli.py  mcp_knowledge.py  scenario_builder.py  scenario_builder_core.py  scenario_builder_helpers.py  scenario_lookup.py  scenario_swarm.py  scenarios.py  timesheets_cli.py  webhooks.py  workspace_assets.py
src/boostspace_cli/catalog/: __init__.py  doctor.py  refresh.py  search.py  store.py  templates.py
src/boostspace_cli/catalog/builders/: __init__.py  make_apps_npm.py  (+1 more)
src/boostspace_cli/data/: __init__.py  formula_registry.json  module_registry.json  native_modules.json
src/boostspace_cli/formulas/: __init__.py  lint.py  search.py  store.py
tests/: test_blueprints_cli.py  test_catalog_refresh.py  test_catalog_registry.py  test_catalog_templates.py  test_cli_json_contract.py  test_client_blueprint.py  test_client_errors.py  test_connections_compat_cli.py  test_docs_catalog.py  test_executables.py  test_executions.py  test_formulas_registry.py  test_jsonio.py  test_mcp_cli.py  test_mcp_knowledge.py  test_scenario_builder_connections.py  test_scenario_builder_core.py  test_scenario_builder_helpers.py  test_scenario_modules_cli.py  test_scenario_swarm.py  test_timesheets_cli.py  test_workspace_assets.py
